Clean up proactive.java.policy files, improve surfire settings for Prolog