@@ -33,7 +33,7 @@
 		<module>play-dcep-distributedetalis</module>
 		<module>play-dcep-dcepmanager</module>
 		<module>play-dcep-distribution</module>
-		<!-- I removed this from the build because it takes so much time... please 
+		<!-- I removed this from the build because it takes so much time... please
 			enter this directory manually :stuehmer -->
 		<!--<module>play-dcep-distribution-eventcloud-remote-tests</module> -->
 	</modules>
@@ -84,15 +84,6 @@
 
 	<build>
 		<plugins>
-			<!-- Run unit tests in single JVM because Prolog JNI (JPL) causes problems -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine><![CDATA[-Djava.security.manager -Djava.security.policy=src/main/resources/proactive.java.policy]]></argLine>
-					<forkCount>0</forkCount>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-doap-plugin</artifactId>
